@@ -126,6 +126,9 @@ RELEASE NOTES
     to Prolog database and reflection built-in predicates whenever the first
     argument is an explicit module-qualified term.
 
+    Turning on the "smart_compilation" compiler flag will now automatically
+    switch off the "clean" flag.
+
     For all config files, renamed the predicate '$lgt_is_proper_list'/1 to
     '$lgt_is_list'/1 and and replaced the old '$lgt_is_list'/1 predicate by
     a new '$lgt_is_list_or_partial_list'/1 predicate.
